<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:scrollIndicators="none"
        >
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:background="#F5F5F5"
       >


       <ImageView
           android:id="@+id/imageView2"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:srcCompat="@drawable/animation"
           android:scaleType="centerCrop"
           android:layout_marginHorizontal="20dp"
           />
       <TextView
           android:id="@+id/drawer_aboutus"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="start"
           android:layout_marginHorizontal="20dp"
           android:layout_marginTop="20dp"
           android:fontFamily="@font/product_sans_medium"
           android:text="@string/our_fields"
           android:textColor="@color/black"
           android:textSize="20sp"
           />

       <HorizontalScrollView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="20dp"
           android:layout_marginTop="10dp"
           android:fillViewport="true"

           >

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">


               <LinearLayout
                   android:layout_width="140dp"
                   android:layout_height="100dp"
                   android:layout_marginEnd="10dp"
                   android:background="@color/white"
                   android:orientation="vertical"
                   android:weightSum="3">

                   <ImageView
                       android:layout_width="match_parent"
                       android:layout_height="0dp"
                       android:layout_margin="20dp"
                       android:layout_weight="2"
                       android:gravity="center"

                       app:srcCompat="@drawable/mobile" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       android:layout_marginHorizontal="20dp"
                       android:layout_weight="1"
                       android:fontFamily="@font/product_sans_medium"
                       android:text="@string/mobile"
                       android:textColor="@color/black"
                       android:textSize="17sp" />
               </LinearLayout>

               <LinearLayout
                   android:layout_width="140dp"
                   android:layout_height="100dp"
                   android:layout_marginEnd="10dp"
                   android:background="@color/white"
                   android:orientation="vertical"
                   android:weightSum="3">

                   <ImageView
                       android:id="@+id/imageView3"
                       android:layout_width="match_parent"
                       android:layout_height="0dp"
                       android:layout_margin="20dp"
                       android:layout_weight="2"
                       android:gravity="center"

                       app:srcCompat="@drawable/web" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       android:layout_marginHorizontal="20dp"
                       android:layout_weight="1"
                       android:fontFamily="@font/product_sans_medium"
                       android:text="@string/web"
                       android:textColor="@color/black"
                       android:textSize="17sp" />
               </LinearLayout>


               <LinearLayout
                   android:layout_width="140dp"
                   android:layout_height="100dp"
                   android:layout_marginEnd="10dp"
                   android:background="@color/white"
                   android:orientation="vertical"
                   android:weightSum="3">

                   <ImageView
                       android:layout_width="match_parent"
                       android:layout_height="0dp"
                       android:layout_margin="20dp"
                       android:layout_weight="2"
                       android:gravity="center"

                       app:srcCompat="@drawable/ai" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       android:layout_marginHorizontal="20dp"
                       android:layout_weight="1"
                       android:fontFamily="@font/product_sans_medium"
                       android:text="@string/ai"
                       android:textColor="@color/black"
                       android:textSize="17sp" />
               </LinearLayout>

           </LinearLayout>
       </HorizontalScrollView>
       <TextView

           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="start"
           android:layout_marginHorizontal="20dp"
           android:layout_marginTop="20dp"
           android:fontFamily="@font/product_sans_medium"
           android:text="@string/previous"
           android:textColor="@color/black"
           android:textSize="20sp"
           />

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:layout_marginHorizontal="20dp"
               >

               <ImageView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="10dp"
                   app:srcCompat="@drawable/poo" />

               <ImageView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="10dp"
                   app:srcCompat="@drawable/pol" />
               <ImageView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="10dp"
                   app:srcCompat="@drawable/poo" />
           </LinearLayout>

   </LinearLayout>
    </ScrollView>
</FrameLayout>